infra/manifests/excalidash/statefulset-backend.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: excalidash-backend
spec:
  selector:
    matchLabels:
      app: excalidash-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: excalidash-backend
    spec:
      containers:
      - name: backend
        image: zimengxiong/excalidash-backend # Overridden
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /app/prisma
          name: excalidash-data
  volumeClaimTemplates:
  - metadata:
      name: excalidash-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 2Gi
