infra/manifests/excalidash/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidash-frontend
spec:
  selector:
    app: excalidash-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
