infra/manifests/excalidash/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: excalidash
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: excalidash.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - name: excalidash-tls
        namespace: excalidash
